# Basileus

./: .gitignore  CMakeLists.txt  Makefile
assets/shaders/: debug_fragment.glsl  fragment.glsl  light_source_vert.glsl  lighting_fragment.glsl  phong_vert.glsl  textured_frag.glsl  textured_phong_frag.glsl  textured_phong_vert.glsl  vertex.glsl
docs/: architecture.txt  camera.txt  debug_geometry.txt  mesh.txt
include/basileus/: camera.h  debug_geometry.h  entity.h  light.h  material.h  mesh.h  renderer.h  shader.h  shader_utils.h  texture_utils.h  transform.h
include/glad/: gl.h
src/: camera.c  debug_geometry.c  entity.c  light.c  main.c  material.c  mesh.c  renderer.c  shader.c  shader_utils.c  texture_utils.c  transform.c
